<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.DisplayNeighbourActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/neighbourAvatarDisplay"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <android.support.v7.widget.Toolbar
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="#00000000"
            android:theme="@style/Theme.AppCompat">
        </android.support.v7.widget.Toolbar>


        <TextView
            android:id="@+id/name_onPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="@id/neighbourAvatarDisplay"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="28dp"
            android:textStyle="bold"
            android:textColor="#ffffff">
        </TextView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neighbourAvatarDisplay"
            app:layout_constraintBottom_toBottomOf="@id/neighbourAvatarDisplay"
            android:layout_marginRight="16dp"
            android:backgroundTint="#FFFFFF">

        </android.support.design.widget.FloatingActionButton>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/name_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/name"
                android:textSize="23sp"
                android:gravity="center|left">
            </TextView>

            <ImageView
                android:id="@+id/adress_pic"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/place"
                android:layout_below="@+id/name_des">
            </ImageView>
            <TextView
                android:id="@+id/adress_des"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/adress"
                android:textColor="@color/cardview_dark_background"
                android:gravity="center|left"
                android:layout_below="@+id/name_des"
                android:layout_toRightOf="@id/adress_pic">
            </TextView>

            <ImageView
                android:id="@+id/number_pic"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/phone_call"
                android:layout_below="@+id/adress_pic">
            </ImageView>
            <TextView
                android:id="@+id/number_des"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/number"
                android:textColor="@color/cardview_dark_background"
                android:gravity="center|left"
                android:layout_below="@+id/adress_des"
                android:layout_toRightOf="@id/number_pic">
            </TextView>

            <ImageView
                android:id="@+id/social_link_pic"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/world_grid"
                android:layout_below="@+id/number_pic">
            </ImageView>
            <TextView
                android:id="@+id/social_link_des"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/social_link"
                android:textColor="@color/cardview_dark_background"
                android:gravity="center|left"
                android:layout_below="@+id/number_des"
                android:layout_toRightOf="@id/number_pic">
            </TextView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/about_me_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="A propos de Moi"
            android:gravity="left"
            android:textSize="23dp">
        </TextView>
        <TextView
            android:id="@+id/about_me_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_me_title"
            android:text="@string/lorem_ipsum">
        </TextView>
    </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.v7.widget.LinearLayoutCompat>